<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:itemIconTint="@color/navigation_color_selector"
        app:itemTextColor="@color/navigation_color_unselected"/>
    <item
        android:id="@+id/navigation_following"
        android:icon="@drawable/ic_heart"
        android:title="@string/following"
        app:itemIconTint="@color/navigation_color_selector"
        app:itemTextColor="@color/navigation_color_unselected"/>

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_basket"
        android:title="@string/basket"
        app:itemIconTint="@color/navigation_color_selector"
        app:itemTextColor="@color/navigation_color_unselected"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:itemIconTint="@color/navigation_color_selector"
        app:itemTextColor="@color/navigation_color_unselected"/>

</menu>
