<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layoutDirection="rtl">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@drawable/tomato_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/black">

        <TextView
            android:id="@+id/basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/hacen_beirut_bight"
            android:text="مناطق التوصيل"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <!-- Header Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_area"
            android:textSize="25sp"
            android:fontFamily="@font/hacen_beirut_bight"
            android:textColor="@color/tomato_red"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <!-- State and City Dropdowns -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/tomato_padding_button"
                android:prompt="@string/choose_state" />

            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/tomato_padding_button"
                android:prompt="@string/choose_city" />
        </LinearLayout>

        <!-- Enter Area Text Field and Add Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/area_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="أدخل المنطقة"
                android:inputType="text"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/add_area_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="إضافة"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/tomato_button"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Delivery Areas List Header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="مناطق التوصيل"
            android:textSize="25sp"
            android:fontFamily="@font/hacen_beirut_bight"
            android:textColor="@color/tomato_red"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />


        <!-- Delivery Areas List -->
        <ListView
            android:id="@+id/delivery_areas_list_view"
            android:layout_width="match_parent"
            android:layoutDirection="rtl"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />

        <!-- Save Changes Button -->
        <Button
            android:id="@+id/save_changes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/tomato_button"
            android:fontFamily="@font/hacen_beirut_bight"
            android:textSize="20sp"
            android:text="حفظ التغييرات"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>
</LinearLayout>
